syntax = "proto3";

package dmicro.topic;

message UserInfo {
    int64 uid = 1;
    string mobile = 2;
}

message UserCreated {
    int64 id = 1;
    string topic = 2;
    UserInfo info = 3;
}
