syntax = "proto3";

package go.micro.srv.passport;

service Passport {
	rpc Sms(Request) returns (Response) {}
	rpc SmsLogin(SmsLoginRequest) returns (SmsLoginResponse) {}
	rpc Login(LoginRequest) returns (LoginResponse) {}
	rpc OAuthLogin(OAuthLoginRequest) returns (OAuthLoginResponse) {}
	rpc SetPwd(SetPwdRequest) returns (SetPwdResponse) {}
	rpc AuthToken(AuthTokenRequest) returns (AuthTokenResponse) {}
	rpc AuthCookie(AuthCookieRequest) returns (AuthCookieResponse) {}
}

message TokenInfo {
	int64 uid = 1;
	string token = 2;
	string refresh_token = 3;
	int64 expired_at = 4;
}

message Request {
	string mobile = 1;
}

message Response {
	string code = 1;
}

message SmsLoginRequest {
	string mobile = 1;
	string code = 2;
}

message SmsLoginResponse {
	TokenInfo token_info = 1;
}

message LoginRequest {
	string mobile = 1;
	string passwd = 2;
}

message LoginResponse {
	TokenInfo token_info = 1;
}

message OAuthLoginRequest {
	string platform = 1;
	string code = 2;
}

message OAuthLoginResponse {
	TokenInfo token_info = 1;
}

message SetPwdRequest{
	string passwd = 1;
}

message SetPwdResponse{
	TokenInfo token_info = 1;
}

message AuthTokenRequest {
}

message AuthTokenResponse {
}

message AuthCookieRequest {
    string Cookie = 1;
}

message AuthCookieResponse {
}
